2007-09-27  Kai Tietz  <kai.tietz@onevision.com>

	* math/logf.S: Removed.
	* math/floorf.S: Removed.
	* math/log10f.S: Removed.
	* math/copysignf.S: Removed.
	* math/copysign.S: Removed.
	* math/logf.c: New.
	* math/floorf.c: New.
	* math/log10f.c: New.
	* math/copysignf.c: New.
	* math/copysign.c: New.
	* math/ceill.S: Adjust calling convention.
	* math/copysignl.S: Likewise.
	* math/cosl.S: Likewise.
	* math/exp2.S: Likewise.
	* math/exp2f.S: Likewise.
	* math/exp2l.S: Likewise.
	* math/floorl.S: Likewise.
	* math/fma.S: Likewise.
	* math/fmaf.S: Likewise.
	* math/frexpl.S: Likewise.
	* math/ilogb.S: Likewise.
	* math/ilogbf.S: Likewise.
	* math/ilogbl.S: Likewise.
	* math/log10l.S: Likewise.
	* math/log1p.S: Likewise.
	* math/log1pf.S: Likewise.
	* math/log1pl.S: Likewise.
	* math/log2.S: Likewise.
	* math/log2f.S: Likewise.
	* math/log2l.S: Likewise.
	* math/logl.S: Likewise.
	* math/nearbyint.S: Likewise.
	* math/nearbyintf.S: Likewise.
	* math/nearbyintl.S: Likewise.
	* math/remainder.S: Likewise.
	* math/remainderf.S: Likewise.
	* math/remainderl.S: Likewise.
	* math/remquo.S: Likewise.
	* math/remquof.S: Likewise.
	* math/remquol.S: Likewise.
	* math/scalbn.S: Likewise.
	* math/scalbnf.S: Likewise.
	* math/scalbnl.S: Likewise.
	* math/sinl.S: Likewise.
	* math/tanl.S: Likewise.

2007-09-26  Kai Tietz  <kai.tietz@onevision.com>

	* Makefile: Add _findfirst64i32.c.
	Add _findnext64i32.c.
	* stdio/_findfirst64i32.c: New.
	* stdio/_findnext64i32.c: New.
	* math/sinf.S: Removed.
	* math/cosf.S: Removed.
	* math/tanf.S: Removed.
	* math/ceilf.S: Removed.
	* math/sinf.c: New.
	* math/cosf.c: New.
	* math/tanf.c: New.
	* math/ceilf.c: New.

2007-09-24  Kai Tietz  <kai.tietz@onevision.com>

	* dirent.c: (_topendir): Let d_name point to dd_dta.name.
	PR/1801043
	* mktime.c, difftime.c, ctime.c, gmtime.c, localtime.c,
	_mkgmtime.c, time.c: New files in misc.
	* Makefile: Add new files to build.

2007-09-21  Kai Tietz  <kai.tietz@onevision.com>
