@@ -16,266 +16,266 @@ extern "C" {
 #endif
 #endif
 
-#define __deref_in
-#define __deref_in_ecount(size)
-#define __deref_in_bcount(size)
+#define SAL__deref_in
+#define SAL__deref_in_ecount(size)
+#define SAL__deref_in_bcount(size)
 
-#define __deref_in_opt
-#define __deref_in_ecount_opt(size)
-#define __deref_in_bcount_opt(size)
+#define SAL__deref_in_opt
+#define SAL__deref_in_ecount_opt(size)
+#define SAL__deref_in_bcount_opt(size)
 
-#define __deref_opt_in
-#define __deref_opt_in_ecount(size)
-#define __deref_opt_in_bcount(size)
+#define SAL__deref_opt_in
+#define SAL__deref_opt_in_ecount(size)
+#define SAL__deref_opt_in_bcount(size)
 
-#define __deref_opt_in_opt
-#define __deref_opt_in_ecount_opt(size)
-#define __deref_opt_in_bcount_opt(size)
+#define SAL__deref_opt_in_opt
+#define SAL__deref_opt_in_ecount_opt(size)
+#define SAL__deref_opt_in_bcount_opt(size)
 
-#define __out_awcount(expr,size)
-#define __in_awcount(expr,size)
+#define SAL__out_awcount(expr,size)
+#define SAL__in_awcount(expr,size)
 
 /* Renamed __null to SAL__null for avoiding private keyword conflicts between
    gcc and MS world.  */
 #define SAL__null
-#define __notnull
-#define __maybenull
-#define __readonly
-#define __notreadonly
-#define __maybereadonly
-#define __valid
-#define __notvalid
-#define __maybevalid
-#define __readableTo(extent)
-#define __elem_readableTo(size)
-#define __byte_readableTo(size)
-#define __writableTo(size)
-#define __elem_writableTo(size)
-#define __byte_writableTo(size)
-#define __deref
-#define __pre
-#define __post
-#define __precond(expr)
-#define __postcond(expr)
-#define __exceptthat
-#define __execeptthat
-#define __inner_success(expr)
-#define __inner_checkReturn
-#define __inner_typefix(ctype)
-#define __inner_override
-#define __inner_callback
-#define __inner_blocksOn(resource)
-#define __inner_fallthrough_dec
-#define __inner_fallthrough
+#define SAL__notnull
+#define SAL__maybenull
+#define SAL__readonly
+#define SAL__notreadonly
+#define SAL__maybereadonly
+#define SAL__valid
+#define SAL__notvalid
+#define SAL__maybevalid
+#define SAL__readableTo(extent)
+#define SAL__elem_readableTo(size)
+#define SAL__byte_readableTo(size)
+#define SAL__writableTo(size)
+#define SAL__elem_writableTo(size)
+#define SAL__byte_writableTo(size)
+#define SAL__deref
+#define SAL__pre
+#define SAL__post
+#define SAL__precond(expr)
+#define SAL__postcond(expr)
+#define SAL__exceptthat
+#define SAL__execeptthat
+#define SAL__inner_success(expr)
+#define SAL__inner_checkReturn
+#define SAL__inner_typefix(ctype)
+#define SAL__inner_override
+#define SAL__inner_callback
+#define SAL__inner_blocksOn(resource)
+#define SAL__inner_fallthrough_dec
+#define SAL__inner_fallthrough
 #define __refparam
-#define __inner_control_entrypoint(category)
-#define __inner_data_entrypoint(category)
+#define SAL__inner_control_entrypoint(category)
+#define SAL__inner_data_entrypoint(category)
 
-#define __ecount(size)
-#define __bcount(size)
+#define SAL__ecount(size)
+#define SAL__bcount(size)
 
-#define __in
-#define __in_opt
-#define __in_nz
-#define __in_nz_opt
-#define __in_z
-#define __in_z_opt
-#define __in_ecount(size)
-#define __in_ecount_nz(size)
-#define __in_ecount_z(size)
-#define __in_bcount(size)
-#define __in_bcount_z(size)
-#define __in_bcount_nz(size)
-#define __in_ecount_opt(size)
-#define __in_bcount_opt(size)
-#define __in_ecount_z_opt(size)
-#define __in_bcount_z_opt(size)
-#define __in_ecount_nz_opt(size)
-#define __in_bcount_nz_opt(size)
+#define SAL__in
+#define SAL__in_opt
+#define SAL__in_nz
+#define SAL__in_nz_opt
+#define SAL__in_z
+#define SAL__in_z_opt
+#define SAL__in_ecount(size)
+#define SAL__in_ecount_nz(size)
+#define SAL__in_ecount_z(size)
+#define SAL__in_bcount(size)
+#define SAL__in_bcount_z(size)
+#define SAL__in_bcount_nz(size)
+#define SAL__in_ecount_opt(size)
+#define SAL__in_bcount_opt(size)
+#define SAL__in_ecount_z_opt(size)
+#define SAL__in_bcount_z_opt(size)
+#define SAL__in_ecount_nz_opt(size)
+#define SAL__in_bcount_nz_opt(size)
 
-#define __out
-#define __out_ecount(size)
-#define __out_z
-#define __out_nz
-#define __out_nz_opt
-#define __out_z_opt
-#define __out_ecount_part(size,length)
-#define __out_ecount_full(size)
-#define __out_ecount_nz(size)
-#define __out_ecount_z(size)
-#define __out_ecount_part_z(size,length)
-#define __out_ecount_full_z(size)
-#define __out_bcount(size)
-#define __out_bcount_part(size,length)
-#define __out_bcount_full(size)
-#define __out_bcount_z(size)
-#define __out_bcount_part_z(size,length)
-#define __out_bcount_full_z(size)
-#define __out_bcount_nz(size)
+#define SAL__out
+#define SAL__out_ecount(size)
+#define SAL__out_z
+#define SAL__out_nz
+#define SAL__out_nz_opt
+#define SAL__out_z_opt
+#define SAL__out_ecount_part(size,length)
+#define SAL__out_ecount_full(size)
+#define SAL__out_ecount_nz(size)
+#define SAL__out_ecount_z(size)
+#define SAL__out_ecount_part_z(size,length)
+#define SAL__out_ecount_full_z(size)
+#define SAL__out_bcount(size)
+#define SAL__out_bcount_part(size,length)
+#define SAL__out_bcount_full(size)
+#define SAL__out_bcount_z(size)
+#define SAL__out_bcount_part_z(size,length)
+#define SAL__out_bcount_full_z(size)
+#define SAL__out_bcount_nz(size)
 
-#define __inout
-#define __inout_ecount(size)
-#define __inout_bcount(size)
-#define __inout_ecount_part(size,length)
-#define __inout_bcount_part(size,length)
-#define __inout_ecount_full(size)
-#define __inout_bcount_full(size)
-#define __inout_z
-#define __inout_ecount_z(size)
-#define __inout_bcount_z(size)
-#define __inout_nz
-#define __inout_ecount_nz(size)
-#define __inout_bcount_nz(size)
-#define __ecount_opt(size)
-#define __bcount_opt(size)
-#define __out_opt
-#define __out_ecount_opt(size)
-#define __out_bcount_opt(size)
-#define __out_ecount_part_opt(size,length)
-#define __out_bcount_part_opt(size,length)
-#define __out_ecount_full_opt(size)
-#define __out_bcount_full_opt(size)
-#define __out_ecount_z_opt(size)
-#define __out_bcount_z_opt(size)
-#define __out_ecount_part_z_opt(size,length)
-#define __out_bcount_part_z_opt(size,length)
-#define __out_ecount_full_z_opt(size)
-#define __out_bcount_full_z_opt(size)
-#define __out_ecount_nz_opt(size)
-#define __out_bcount_nz_opt(size)
-#define __inout_opt
-#define __inout_ecount_opt(size)
-#define __inout_bcount_opt(size)
-#define __inout_ecount_part_opt(size,length)
-#define __inout_bcount_part_opt(size,length)
-#define __inout_ecount_full_opt(size)
-#define __inout_bcount_full_opt(size)
-#define __inout_z_opt
-#define __inout_ecount_z_opt(size)
-#define __inout_bcount_z_opt(size)
-#define __inout_nz_opt
-#define __inout_ecount_nz_opt(size)
-#define __inout_bcount_nz_opt(size)
-#define __deref_ecount(size)
-#define __deref_bcount(size)
-#define __deref_out
-#define __deref_out_ecount(size)
-#define __deref_out_bcount(size)
-#define __deref_out_ecount_part(size,length)
-#define __deref_out_bcount_part(size,length)
-#define __deref_out_ecount_full(size)
-#define __deref_out_bcount_full(size)
-#define __deref_out_z
-#define __deref_out_ecount_z(size)
-#define __deref_out_bcount_z(size)
-#define __deref_out_nz
-#define __deref_out_ecount_nz(size)
-#define __deref_out_bcount_nz(size)
-#define __deref_inout
-#define __deref_inout_ecount(size)
-#define __deref_inout_bcount(size)
-#define __deref_inout_ecount_part(size,length)
-#define __deref_inout_bcount_part(size,length)
-#define __deref_inout_ecount_full(size)
-#define __deref_inout_bcount_full(size)
-#define __deref_inout_z
-#define __deref_inout_ecount_z(size)
-#define __deref_inout_bcount_z(size)
-#define __deref_inout_nz
-#define __deref_inout_ecount_nz(size)
-#define __deref_inout_bcount_nz(size)
-#define __deref_ecount_opt(size)
-#define __deref_bcount_opt(size)
-#define __deref_out_opt
-#define __deref_out_ecount_opt(size)
-#define __deref_out_bcount_opt(size)
-#define __deref_out_ecount_part_opt(size,length)
-#define __deref_out_bcount_part_opt(size,length)
-#define __deref_out_ecount_full_opt(size)
-#define __deref_out_bcount_full_opt(size)
-#define __deref_out_z_opt
-#define __deref_out_ecount_z_opt(size)
-#define __deref_out_bcount_z_opt(size)
-#define __deref_out_nz_opt
-#define __deref_out_ecount_nz_opt(size)
-#define __deref_out_bcount_nz_opt(size)
-#define __deref_inout_opt
-#define __deref_inout_ecount_opt(size)
-#define __deref_inout_bcount_opt(size)
-#define __deref_inout_ecount_part_opt(size,length)
-#define __deref_inout_bcount_part_opt(size,length)
-#define __deref_inout_ecount_full_opt(size)
-#define __deref_inout_bcount_full_opt(size)
-#define __deref_inout_z_opt
-#define __deref_inout_ecount_z_opt(size)
-#define __deref_inout_bcount_z_opt(size)
-#define __deref_inout_nz_opt
-#define __deref_inout_ecount_nz_opt(size)
-#define __deref_inout_bcount_nz_opt(size)
-#define __deref_opt_ecount(size)
-#define __deref_opt_bcount(size)
-#define __deref_opt_out
-#define __deref_opt_out_z
-#define __deref_opt_out_ecount(size)
-#define __deref_opt_out_bcount(size)
-#define __deref_opt_out_ecount_part(size,length)
-#define __deref_opt_out_bcount_part(size,length)
-#define __deref_opt_out_ecount_full(size)
-#define __deref_opt_out_bcount_full(size)
-#define __deref_opt_inout
-#define __deref_opt_inout_ecount(size)
-#define __deref_opt_inout_bcount(size)
-#define __deref_opt_inout_ecount_part(size,length)
-#define __deref_opt_inout_bcount_part(size,length)
-#define __deref_opt_inout_ecount_full(size)
-#define __deref_opt_inout_bcount_full(size)
-#define __deref_opt_inout_z
-#define __deref_opt_inout_ecount_z(size)
-#define __deref_opt_inout_bcount_z(size)
-#define __deref_opt_inout_nz
-#define __deref_opt_inout_ecount_nz(size)
-#define __deref_opt_inout_bcount_nz(size)
-#define __deref_opt_ecount_opt(size)
-#define __deref_opt_bcount_opt(size)
-#define __deref_opt_out_opt
-#define __deref_opt_out_ecount_opt(size)
-#define __deref_opt_out_bcount_opt(size)
-#define __deref_opt_out_ecount_part_opt(size,length)
-#define __deref_opt_out_bcount_part_opt(size,length)
-#define __deref_opt_out_ecount_full_opt(size)
-#define __deref_opt_out_bcount_full_opt(size)
-#define __deref_opt_out_z_opt
-#define __deref_opt_out_ecount_z_opt(size)
-#define __deref_opt_out_bcount_z_opt(size)
-#define __deref_opt_out_nz_opt
-#define __deref_opt_out_ecount_nz_opt(size)
-#define __deref_opt_out_bcount_nz_opt(size)
-#define __deref_opt_inout_opt
-#define __deref_opt_inout_ecount_opt(size)
-#define __deref_opt_inout_bcount_opt(size)
-#define __deref_opt_inout_ecount_part_opt(size,length)
-#define __deref_opt_inout_bcount_part_opt(size,length)
-#define __deref_opt_inout_ecount_full_opt(size)
-#define __deref_opt_inout_bcount_full_opt(size)
-#define __deref_opt_inout_z_opt
-#define __deref_opt_inout_ecount_z_opt(size)
-#define __deref_opt_inout_bcount_z_opt(size)
-#define __deref_opt_inout_nz_opt
-#define __deref_opt_inout_ecount_nz_opt(size)
-#define __deref_opt_inout_bcount_nz_opt(size)
+#define SAL__inout
+#define SAL__inout_ecount(size)
+#define SAL__inout_bcount(size)
+#define SAL__inout_ecount_part(size,length)
+#define SAL__inout_bcount_part(size,length)
+#define SAL__inout_ecount_full(size)
+#define SAL__inout_bcount_full(size)
+#define SAL__inout_z
+#define SAL__inout_ecount_z(size)
+#define SAL__inout_bcount_z(size)
+#define SAL__inout_nz
+#define SAL__inout_ecount_nz(size)
+#define SAL__inout_bcount_nz(size)
+#define SAL__ecount_opt(size)
+#define SAL__bcount_opt(size)
+#define SAL__out_opt
+#define SAL__out_ecount_opt(size)
+#define SAL__out_bcount_opt(size)
+#define SAL__out_ecount_part_opt(size,length)
+#define SAL__out_bcount_part_opt(size,length)
+#define SAL__out_ecount_full_opt(size)
+#define SAL__out_bcount_full_opt(size)
+#define SAL__out_ecount_z_opt(size)
+#define SAL__out_bcount_z_opt(size)
+#define SAL__out_ecount_part_z_opt(size,length)
+#define SAL__out_bcount_part_z_opt(size,length)
+#define SAL__out_ecount_full_z_opt(size)
+#define SAL__out_bcount_full_z_opt(size)
+#define SAL__out_ecount_nz_opt(size)
+#define SAL__out_bcount_nz_opt(size)
+#define SAL__inout_opt
+#define SAL__inout_ecount_opt(size)
+#define SAL__inout_bcount_opt(size)
+#define SAL__inout_ecount_part_opt(size,length)
+#define SAL__inout_bcount_part_opt(size,length)
+#define SAL__inout_ecount_full_opt(size)
+#define SAL__inout_bcount_full_opt(size)
+#define SAL__inout_z_opt
+#define SAL__inout_ecount_z_opt(size)
+#define SAL__inout_bcount_z_opt(size)
+#define SAL__inout_nz_opt
+#define SAL__inout_ecount_nz_opt(size)
+#define SAL__inout_bcount_nz_opt(size)
+#define SAL__deref_ecount(size)
+#define SAL__deref_bcount(size)
+#define SAL__deref_out
+#define SAL__deref_out_ecount(size)
+#define SAL__deref_out_bcount(size)
+#define SAL__deref_out_ecount_part(size,length)
+#define SAL__deref_out_bcount_part(size,length)
+#define SAL__deref_out_ecount_full(size)
+#define SAL__deref_out_bcount_full(size)
+#define SAL__deref_out_z
+#define SAL__deref_out_ecount_z(size)
+#define SAL__deref_out_bcount_z(size)
+#define SAL__deref_out_nz
+#define SAL__deref_out_ecount_nz(size)
+#define SAL__deref_out_bcount_nz(size)
+#define SAL__deref_inout
+#define SAL__deref_inout_ecount(size)
+#define SAL__deref_inout_bcount(size)
+#define SAL__deref_inout_ecount_part(size,length)
+#define SAL__deref_inout_bcount_part(size,length)
+#define SAL__deref_inout_ecount_full(size)
+#define SAL__deref_inout_bcount_full(size)
+#define SAL__deref_inout_z
+#define SAL__deref_inout_ecount_z(size)
+#define SAL__deref_inout_bcount_z(size)
+#define SAL__deref_inout_nz
+#define SAL__deref_inout_ecount_nz(size)
+#define SAL__deref_inout_bcount_nz(size)
+#define SAL__deref_ecount_opt(size)
+#define SAL__deref_bcount_opt(size)
+#define SAL__deref_out_opt
+#define SAL__deref_out_ecount_opt(size)
+#define SAL__deref_out_bcount_opt(size)
+#define SAL__deref_out_ecount_part_opt(size,length)
+#define SAL__deref_out_bcount_part_opt(size,length)
+#define SAL__deref_out_ecount_full_opt(size)
+#define SAL__deref_out_bcount_full_opt(size)
+#define SAL__deref_out_z_opt
+#define SAL__deref_out_ecount_z_opt(size)
+#define SAL__deref_out_bcount_z_opt(size)
+#define SAL__deref_out_nz_opt
+#define SAL__deref_out_ecount_nz_opt(size)
+#define SAL__deref_out_bcount_nz_opt(size)
+#define SAL__deref_inout_opt
+#define SAL__deref_inout_ecount_opt(size)
+#define SAL__deref_inout_bcount_opt(size)
+#define SAL__deref_inout_ecount_part_opt(size,length)
+#define SAL__deref_inout_bcount_part_opt(size,length)
+#define SAL__deref_inout_ecount_full_opt(size)
+#define SAL__deref_inout_bcount_full_opt(size)
+#define SAL__deref_inout_z_opt
+#define SAL__deref_inout_ecount_z_opt(size)
+#define SAL__deref_inout_bcount_z_opt(size)
+#define SAL__deref_inout_nz_opt
+#define SAL__deref_inout_ecount_nz_opt(size)
+#define SAL__deref_inout_bcount_nz_opt(size)
+#define SAL__deref_opt_ecount(size)
+#define SAL__deref_opt_bcount(size)
+#define SAL__deref_opt_out
+#define SAL__deref_opt_out_z
+#define SAL__deref_opt_out_ecount(size)
+#define SAL__deref_opt_out_bcount(size)
+#define SAL__deref_opt_out_ecount_part(size,length)
+#define SAL__deref_opt_out_bcount_part(size,length)
+#define SAL__deref_opt_out_ecount_full(size)
+#define SAL__deref_opt_out_bcount_full(size)
+#define SAL__deref_opt_inout
+#define SAL__deref_opt_inout_ecount(size)
+#define SAL__deref_opt_inout_bcount(size)
+#define SAL__deref_opt_inout_ecount_part(size,length)
+#define SAL__deref_opt_inout_bcount_part(size,length)
+#define SAL__deref_opt_inout_ecount_full(size)
+#define SAL__deref_opt_inout_bcount_full(size)
+#define SAL__deref_opt_inout_z
+#define SAL__deref_opt_inout_ecount_z(size)
+#define SAL__deref_opt_inout_bcount_z(size)
+#define SAL__deref_opt_inout_nz
+#define SAL__deref_opt_inout_ecount_nz(size)
+#define SAL__deref_opt_inout_bcount_nz(size)
+#define SAL__deref_opt_ecount_opt(size)
+#define SAL__deref_opt_bcount_opt(size)
+#define SAL__deref_opt_out_opt
+#define SAL__deref_opt_out_ecount_opt(size)
+#define SAL__deref_opt_out_bcount_opt(size)
+#define SAL__deref_opt_out_ecount_part_opt(size,length)
+#define SAL__deref_opt_out_bcount_part_opt(size,length)
+#define SAL__deref_opt_out_ecount_full_opt(size)
+#define SAL__deref_opt_out_bcount_full_opt(size)
+#define SAL__deref_opt_out_z_opt
+#define SAL__deref_opt_out_ecount_z_opt(size)
+#define SAL__deref_opt_out_bcount_z_opt(size)
+#define SAL__deref_opt_out_nz_opt
+#define SAL__deref_opt_out_ecount_nz_opt(size)
+#define SAL__deref_opt_out_bcount_nz_opt(size)
+#define SAL__deref_opt_inout_opt
+#define SAL__deref_opt_inout_ecount_opt(size)
+#define SAL__deref_opt_inout_bcount_opt(size)
+#define SAL__deref_opt_inout_ecount_part_opt(size,length)
+#define SAL__deref_opt_inout_bcount_part_opt(size,length)
+#define SAL__deref_opt_inout_ecount_full_opt(size)
+#define SAL__deref_opt_inout_bcount_full_opt(size)
+#define SAL__deref_opt_inout_z_opt
+#define SAL__deref_opt_inout_ecount_z_opt(size)
+#define SAL__deref_opt_inout_bcount_z_opt(size)
+#define SAL__deref_opt_inout_nz_opt
+#define SAL__deref_opt_inout_ecount_nz_opt(size)
+#define SAL__deref_opt_inout_bcount_nz_opt(size)
 
-#define __success(expr)
-#define __nullterminated
-#define __nullnullterminated
-#define __reserved
-#define __checkReturn
-#define __typefix(ctype)
-#define __override
-#define __callback
-#define __format_string
-#define __blocksOn(resource)
-#define __control_entrypoint(category)
-#define __data_entrypoint(category)
+#define SAL__success(expr)
+#define SAL__nullterminated
+#define SAL__nullnullterminated
+#define SAL__reserved
+#define SAL__checkReturn
+#define SAL__typefix(ctype)
+#define SAL__override
+#define SAL__callback
+#define SAL__format_string
+#define SAL__blocksOn(resource)
+#define SAL__control_entrypoint(category)
+#define SAL__data_entrypoint(category)
 
 #ifndef __fallthrough
 #define __fallthrough
