@@ -1,3 +1,8 @@
+2007-10-01  Kai Tietz  <kai.tietz@onevision.com>
+
+	* specstrings.h: Prefix SAL defines by SAL(xxx). This prevents
+	various conflicts with gnu sources.
+
 2007-09-28  Kai Tietz  <kai.tietz@onevision.com>
 
 	* specstrings.h: Renamed __null to SAL__null. PR/1804037.
